--- a/new web pageee/requirements.txt
+++ b/new web pageee/requirements.txt
@@ -1,16 +1,5 @@
-flask==2.3.3
-flask-cors==4.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.15.2
-openai==1.3.0
-python-dotenv==1.0.0
-schedule==1.2.0
-hashlib
-datetime
-json
-re
-threading
-time
-
-logging 
+requests
+beautifulsoup4
+pandas
+flask
+numpy
